Kubernetes/gatewayapi/tls/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: hedui-gateway-class
spec:
  controllerName: istio.io/gateway-controller
