Kubernetes/gatewayapi/tls/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: hedui-httproute
  namespace: testr
spec:
  parentRefs:
    - name: hedui-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx-service
          port: 80
